--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,7 +59,7 @@ extra:
       link: https://www.youtube.com/@het_tanis8213
       name: Het_Tanis Youtube
 
-    - icon: mdi-web
+    - icon: material/web
       link: https:prolug.org/
       name: ProLUG.org
 
