fixup: readme, broken social link

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,7 +60,7 @@ extra:
       name: Het_Tanis Youtube
 
     - icon: material/web
-      link: https:prolug.org/
+      link: https://www.prolug.org/
       name: ProLUG.org
 
 copyright: Copyright &copy; 2025 Professional Linux Users Group
