feat: add remaining units
fix: pathing

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,6 +37,72 @@ nav:
       - Linux File Operations: lac/u1intro.md
       - Worksheet: lac/u1ws.md
       - Lab: lac/u1lab.md
+      - Bonus: lac/u1b.md
+    - Unit 2:
+      - Essential Tools: lac/u2intro.md
+      - Worksheet: lac/u2ws.md
+      - Lab: lac/u2lab.md
+    - Unit 3:
+      - Storage: lac/u3intro.md
+      - Worksheet: lac/u3ws.md
+      - Lab: lac/u3lab.md
+      - Bonus: lac/u3b.md
+    - Unit 4:
+      - Operating Running Systems: lac/u4intro.md
+      - Worksheet: lac/u4ws.md
+      - Lab: lac/u4lab.md
+    - Unit 5:
+      - Managing Users and Groups: lac/u5intro.md
+      - Worksheet: lac/u5ws.md
+      - Lab: lac/u5lab.md
+    - Unit 6:
+      - Firewalls: lac/u6intro.md
+      - Worksheet: lac/u6ws.md
+      - Lab: lac/u6lab.md
+    - Unit 7:
+      - Package Management & Patching: lac/u7intro.md
+      - Worksheet: lac/u7ws.md
+      - Lab: lac/u7lab.md
+      - Bonus: lac/u7b.md
+    - Unit 8:
+      - Scripting: lac/u8intro.md
+      - Worksheet: lac/u8ws.md
+      - Lab: lac/u8lab.md
+      - Bonus: lac/u8b.md
+    - Unit 9:
+      - Containerization on Linux: lac/u9intro.md
+      - Worksheet: lac/u9ws.md
+      - Lab: lac/u9lab.md
+    - Unit 10:
+      - Kubernetes: lac/u10intro.md
+      - Worksheet: lac/u10ws.md
+      - Lab: lac/u10lab.md
+      - Bonus: lac/u10b.md
+    - Unit 11:
+      - Monitoring: lac/u11intro.md
+      - Worksheet: lac/u11ws.md
+      - Lab: lac/u11lab.md
+    - Unit 12:
+      - Baselines & Benchmarks: lac/u12intro.md
+      - Worksheet: lac/u12ws.md
+      - Lab: lac/u12lab.md
+    - Unit 13:
+      - System Hardening: lac/u13intro.md
+      - Worksheet: lac/u13ws.md
+      - Lab: lac/u13lab.md
+      - Bonus: lac/u13b.md
+    - Unit 14:
+      - Ansible Automation: lac/u14intro.md
+      - Worksheet: lac/u14ws.md
+      - Lab: lac/u14lab.md
+    - Unit 15:
+      - Troubleshooting: lac/u15intro.md
+      - Worksheet: lac/u15ws.md
+      - Lab: lac/u15lab.md
+    - Unit 16:
+      - Incident Response: lac/u16intro.md
+      - Worksheet: lac/u16ws.md
+      - Lab: lac/u16lab.md
   - Linux Security Course:
     - Course Syallabus: psc/syllabus.md
     - Unit 1:
