--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,8 @@
 site_name: ProLUG Docs
 site_url: http://localhost
-repo_name: ProfessionalLinuxUsersGroup/mkdocs
-repo_url: https://github.com/ProfessionalLinuxUsersGroup
+repo_name: ProLUG MkDocs Testing
+repo_url: https://github.com/cmckee786/prolug-mkdocs
+edit: uri edit/main/docs
 theme:
   name: material
   logo: assets/logo.png
@@ -28,6 +29,10 @@ theme:
     - navigation.footer
     - toc.follow
     - content.tabs.link
+    - content.action.edit
+    - content.action.view
+    - content.code.copy
+    - content.code.select
 
 nav:
   - Home: index.md
@@ -154,3 +159,4 @@ markdown_extensions:
 
 plugins:
   - glightbox
+  - search
